Arrays.asList changed to List.of for one object - as example to use